# xpc-serde

./: Cargo.toml
src/: de.rs  error.rs  lib.rs  main.rs  ser.rs
tests/: round_trip.rs
